cabal-version: 3.4
name: chart-svg-compound
version: 0.0.0.1
license: BSD-3-Clause
license-file: LICENSE
copyright: Copyrite, Tony Day, 2023-
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/chart-svg-compound#readme
bug-reports: https://github.com/tonyday567/chart-svg-compound/issues
synopsis: See readme
description: See readme for description.
build-type: Simple
tested-with: GHC == 9.6.2
extra-doc-files:
    readme.org

source-repository head
    type: git
    location: https://github.com/tonyday567/chart-svg-compound

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints

common ghc2021-stanza
    if impl ( ghc >= 9.2 )
        default-language: GHC2021

    if impl ( ghc < 9.2 )
        default-language: Haskell2010
        default-extensions:
            BangPatterns
            BinaryLiterals
            ConstrainedClassMethods
            ConstraintKinds
            DeriveDataTypeable
            DeriveFoldable
            DeriveFunctor
            DeriveGeneric
            DeriveLift
            DeriveTraversable
            DoAndIfThenElse
            EmptyCase
            EmptyDataDecls
            EmptyDataDeriving
            ExistentialQuantification
            ExplicitForAll
            FlexibleContexts
            FlexibleInstances
            ForeignFunctionInterface
            GADTSyntax
            GeneralisedNewtypeDeriving
            HexFloatLiterals
            ImplicitPrelude
            InstanceSigs
            KindSignatures
            MonomorphismRestriction
            MultiParamTypeClasses
            NamedFieldPuns
            NamedWildCards
            NumericUnderscores
            PatternGuards
            PolyKinds
            PostfixOperators
            RankNTypes
            RelaxedPolyRec
            ScopedTypeVariables
            StandaloneDeriving
            StarIsType
            TraditionalRecordSyntax
            TupleSections
            TypeApplications
            TypeOperators
            TypeSynonymInstances

    if impl ( ghc < 9.2 ) && impl ( ghc >= 8.10 )
        default-extensions:
            ImportQualifiedPost
            StandaloneKindSignatures

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , base         >=4.7 && <5
        , bytestring   >=0.11.3 && <0.13
        , chart-svg    >=0.5 && <0.6
        , markup-parse >=0.1 && <0.2
        , optics-core  >=0.4 && <0.5
        , prettychart  >=0.1.2 && <0.2
        , text         >=1.2 && <2.1
        , transformers >= 0.6.1 && < 0.7
    exposed-modules: Chart.Compound
